finished styling landing page. outlined the map page

--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
             <p>a project for AA 191a </p>
         </div>
         <div id="bottom-area">
-            test2
+            <a href = "map_page.html">
+                <button class = "nav-button" type = "button" id = "see-stories">See Stories</button>
+            </a>
+            <a href = https://forms.gle/4ccU9XxjPA8RGTXa6>
+                <button class = "nav-button" type = "button" id = "add-story">Add Story</button>
+            </a>
+
         </div>
-        <script src="js/init.js"></script>
     </body>
 </html>
