--- a/map_page.html
+++ b/map_page.html
@@ -12,8 +12,26 @@
     </head>
     
     <body>
-        <div id="mapArea">text</div>
-        <div id="contents">some more text</div>
+        <div id="header">Little Tokyo Stories</div>
+        <div id="leftPanel">
+            <h1 id="leftHeader">Interactive Map</h1>
+            <div id="mapArea">mapArea</div>
+        </div>
+
+        <div id="rightPanel">
+            <div id="rightHeader">
+                <h1>See Pictures</h1>
+            </div>
+            <div id="slideshow">
+                <img src = images/cat.jpg id="slideimg">
+            </div>
+            <div id="slideButtons">
+                <button>Explore New Location</button>
+                <p>Location Name</p>
+                <p align="center">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+            </div>
+            
+        </div>
     </body>
     <script src="js/init.js"></script>
 </html>
