--- a/map_page.html
+++ b/map_page.html
@@ -20,15 +20,15 @@
 
         <div id="rightPanel">
             <div id="rightHeader">
-                <h1>See Pictures</h1>
+                <h1>Explore Little Tokyo</h1>
             </div>
             <div id="slideshow">
                 <img src = images/cat.jpg id="slideimg">
             </div>
             <div id="slideButtons">
-                <button>Explore New Location</button>
-                <p>Location Name</p>
-                <p align="center">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+                <button onclick="exploreNew()">Explore New Location</button>
+                <p id="locationName">Location Name</p>
+                <p align="center" id="locationStory">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
             </div>
             
         </div>
