added alt image property. noticed some possible bugs

--- a/map_page.html
+++ b/map_page.html
@@ -23,7 +23,7 @@
                 <h1>Explore Little Tokyo</h1>
             </div>
             <div id="slideshow">
-                <img src = images/cat.jpg id="slideimg">
+                <img src = images/cat.jpg id="slideimg" alt=images/cat.jpg>
             </div>
             <div id="slideButtons">
                 <button onclick="exploreNew()">Explore New Location</button>
