change landing page

--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
      <body>
         <div id="top-area">
             <p id = "title-text">Welcome to Little Tokyo Summer Stories</p>
+            <p>we collect stories that highlight the value of Little Tokyo</p>
             <p>a project for AA 191a </p>
         </div>
         <div id="bottom-area">
             <a href = "map_page.html">
                 <button class = "nav-button" type = "button" id = "see-stories">See Stories</button>
             </a>
-            <a href = https://forms.gle/4ccU9XxjPA8RGTXa6>
+            <a href = https://forms.gle/4ccU9XxjPA8RGTXa6 target="_blank">
                 <button class = "nav-button" type = "button" id = "add-story">Add Story</button>
             </a>
 
