added button animations. cleaned up some spacing issues. added learn more button

--- a/map_page.html
+++ b/map_page.html
@@ -23,11 +23,13 @@
                 <h1>Explore Little Tokyo</h1>
             </div>
             <div id="slideshow">
-                <img src = images/cat.jpg id="slideimg" alt=images/cat.jpg>
+                <img src = images/cat.jpg id="slideimg" alt="no image provided">
             </div>
             <div id="slideButtons">
                 <button onclick="exploreNew()">Explore New Location</button>
-                <p id="locationName">Location Name</p>
+            </div>
+            <div id="story">
+                <p align="center" id="locationName">Location Name</p>
                 <p align="center" id="locationStory">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
             </div>
             
