--- a/map_page.html
+++ b/map_page.html
@@ -29,8 +29,8 @@
                 <button onclick="exploreNew()">Explore New Location</button>
             </div>
             <div id="story">
-                <p align="center" id="locationName">Location Name</p>
-                <p align="center" id="locationStory">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+                <p align="center" id="locationName">Explore a location with the button above!</p>
+                <p align="center" id="locationStory">Click the button, I promise it's cool</p>
             </div>
             
         </div>
