updated button spacing on landing page. added nav buttons to map page. updated readme

--- a/map_page.html
+++ b/map_page.html
@@ -12,7 +12,19 @@
     </head>
     
     <body>
-        <div id="header">Little Tokyo Stories</div>
+        <div id="header">
+            Little Tokyo Stories
+            <div>
+                <a href = https://docs.google.com/document/d/1bpz0yP74Z0V4XkXbo8AAxuGdt7IobVXclETfuwayqYU/edit# target="_blank">
+                    <button>Learn More</button>
+                </a>
+
+                <a href = https://forms.gle/4ccU9XxjPA8RGTXa6 target="_blank">
+                    <button>Add Story</button>
+                </a>
+            </div>
+        </div>
+        
         <div id="leftPanel">
             <h1 id="leftHeader">Interactive Map</h1>
             <div id="mapArea">mapArea</div>
