fix learn more link

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href = "map_page.html">
                 <button class = "nav-button" id = "see-stories">See Stories</button>
             </a>
-            <a href = https://docs.google.com/document/d/1bpz0yP74Z0V4XkXbo8AAxuGdt7IobVXclETfuwayqYU/edit# target="_blank">
+            <a href = https://docs.google.com/document/d/1bpz0yP74Z0V4XkXbo8AAxuGdt7IobVXclETfuwayqYU/edit?usp=sharing target="_blank">
                 <button class = "nav-button">Learn More</button>
             </a>
             <a href = https://forms.gle/4ccU9XxjPA8RGTXa6 target="_blank">
